--- a/brugerrejse.html
+++ b/brugerrejse.html
@@ -6,5 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <!--Her starter menuen-->
+    <section class="navigation-mobile">
+      <a href="#" class="active">krishcreative</a>
+      <!--Her starter links-->
+    </section>
+  </body>
 </html>
