--- a/brugerrejse.html
+++ b/brugerrejse.html
@@ -11,6 +11,10 @@
     <section class="navigation-mobile">
       <a href="#" class="active">krishcreative</a>
       <!--Her starter links-->
+      <div id="undersider">
+        <a href="#packages">Packages</a>
+      </div>
+      <!--Her slutter links-->
     </section>
   </body>
 </html>
