Burger menu kode
a href javascript kodning lavet ud fra hjælp på w3schools, og links sat ind i kommentar i koden.

Der er også oprettet en menu.js

--- a/brugerrejse.html
+++ b/brugerrejse.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <!--Her starter menuen-->
+    <!--menuen er lavet med hjælp fra w3schools https://www.w3schools.com/howto/howto_js_mobile_navbar.asp-->
     <section class="navigation-mobile">
       <a href="#" class="active">krishcreative</a>
       <!--Her starter links-->
@@ -15,6 +16,12 @@
         <a href="#packages">Packages</a>
       </div>
       <!--Her slutter links-->
+      <!--Her starter burger menuen-->
+      <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+        <i class="fa fa-bars"></i>"></a
+      >
+      <!--Her slutter burger menuen-->
+      <!--Denne burger menu er lavet med hjælp fra W3schools https://www.w3schools.com/howto/howto_js_mobile_navbar.asp-->
     </section>
   </body>
 </html>
