--- a/brugerrejse.html
+++ b/brugerrejse.html
@@ -19,8 +19,8 @@
       <!--Her slutter links-->
       <!--Her starter burger menuen-->
       <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-        <i class="fa fa-bars"></i>"></a
-      >
+        <i class="fa fa-bars"></i>">
+      </a>
       <!--Her slutter burger menuen-->
       <!--Denne burger menu er lavet med hjælp fra W3schools https://www.w3schools.com/howto/howto_js_mobile_navbar.asp-->
     </section>
