--- a/brugerrejse.html
+++ b/brugerrejse.html
@@ -11,7 +11,7 @@
     <!--Her starter menuen-->
     <!--menuen er lavet med hjælp fra w3schools https://www.w3schools.com/howto/howto_js_mobile_navbar.asp-->
     <section class="navigation-mobile">
-      <a href="#" class="active">krishcreative</a>
+      <a href="#" class="active">Krish Creative</a>
       <!--Her starter links-->
       <div id="undersider">
         <a href="#packages">Packages</a>
@@ -24,5 +24,8 @@
       <!--Her slutter burger menuen-->
       <!--Denne burger menu er lavet med hjælp fra W3schools https://www.w3schools.com/howto/howto_js_mobile_navbar.asp-->
     </section>
+    <div class="bigimage">
+      <img src="/images/krishcreative-picture.jpeg" alt="Wedding photo" />
+    </div>
   </body>
 </html>
