--- a/brugerrejse.html
+++ b/brugerrejse.html
@@ -24,8 +24,18 @@
       <!--Her slutter burger menuen-->
       <!--Denne burger menu er lavet med hjælp fra W3schools https://www.w3schools.com/howto/howto_js_mobile_navbar.asp-->
     </section>
+    <!--Her starter introduktionen på forsiden-->
     <div class="bigimage">
       <img src="/images/krishcreative-picture.jpeg" alt="Wedding photo" />
+      <h1>Lorem ipsum dolor sit amet.</h1>
+      <h3>Lorem, ipsum dolor.</h3>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Error a
+        voluptas, dolore id earum autem optio molestiae incidunt minima quia.
+      </p>
+      <!--Denne streg er lavet med hjælp fra W3schools https://www.w3schools.com/tags/tag_hr.asp-->
+      <hr />
     </div>
+    <!--Her slutter introduktionen på forsiden-->
   </body>
 </html>
