Ny sektion "Latest work"
Kodning til ny sektion på forsiden, "Latest work" samt kommentarer

--- a/brugerrejse.html
+++ b/brugerrejse.html
@@ -37,5 +37,16 @@
       <hr />
     </div>
     <!--Her slutter introduktionen på forsiden-->
+    <!--Her starter sektionen "latest work" på forsiden-->
+    <div class="work">
+      <img src="/images/krish-work.jpeg" alt="Latest work" />
+      <h1>Lorem ipsum dolor sit amet.</h1>
+      <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ab, mollitia.
+        Error, est dicta labore temporibus itaque rerum repellendus? Officiis,
+        cumque!
+      </p>
+    </div>
+    <!--Her slutter sektionen "latest work" på forsiden-->
   </body>
 </html>
