--- a/brugerrejse.html
+++ b/brugerrejse.html
@@ -46,6 +46,7 @@
         Error, est dicta labore temporibus itaque rerum repellendus? Officiis,
         cumque!
       </p>
+      <a href="#">See more</a>
     </div>
     <!--Her slutter sektionen "latest work" på forsiden-->
   </body>
