--- a/brugerrejse.html
+++ b/brugerrejse.html
@@ -46,7 +46,9 @@
         Error, est dicta labore temporibus itaque rerum repellendus? Officiis,
         cumque!
       </p>
-      <a href="#">See more</a>
+      <div class="button">
+        <a href="#">See more</a>
+      </div>
     </div>
     <!--Her slutter sektionen "latest work" på forsiden-->
   </body>
