Styling af navbar
Styling af navbaren med hjælp fra W3schools samt ændring af undersider til engelsk - subpages

--- a/brugerrejse.html
+++ b/brugerrejse.html
@@ -13,7 +13,7 @@
     <section class="navigation-mobile">
       <a href="#" class="active">Krish Creative</a>
       <!--Her starter links-->
-      <div id="undersider">
+      <div id="subpages">
         <a href="#packages">Packages</a>
       </div>
       <!--Her slutter links-->
