Styling af knap
Lavet med en a href og ændret navn fra button til clickme

--- a/brugerrejse.html
+++ b/brugerrejse.html
@@ -46,7 +46,7 @@
         Error, est dicta labore temporibus itaque rerum repellendus? Officiis,
         cumque!
       </p>
-      <div class="button">
+      <div class="clickme">
         <a href="#">See more</a>
       </div>
     </div>
