Styling af book a shoot sektion
+ kommentarer

--- a/brugerrejse.html
+++ b/brugerrejse.html
@@ -51,5 +51,16 @@
       </div>
     </div>
     <!--Her slutter sektionen "latest work" på forsiden-->
+    <!--Her starter sektionen "book a shoot" på forsiden-->
+    <section class="shoot">
+      <img src="/images/book-shoot-krish.jpeg" alt="Book a shoot" />
+      <h1>Lorem ipsum dolor sit amet.</h1>
+      <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ab, mollitia.
+        Error, est dicta labore temporibus itaque rerum repellendus? Officiis,
+        cumque!
+      </p>
+    </section>
+    <!--Her slutter sektionen "book a shoot" på forsiden-->
   </body>
 </html>
