Styling af a href knap
Lavet egen class til "knappen" og stylet den med css som knap

--- a/brugerrejse.html
+++ b/brugerrejse.html
@@ -60,6 +60,9 @@
         Error, est dicta labore temporibus itaque rerum repellendus? Officiis,
         cumque!
       </p>
+      <div class="book">
+        <a href="#">Book a shoot</a>
+      </div>
     </section>
     <!--Her slutter sektionen "book a shoot" på forsiden-->
   </body>
