--- a/brugerrejse.html
+++ b/brugerrejse.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="style.css" />
+    <!--Ny font fra google fonts https://fonts.google.com/specimen/Playfair+Display?category=Serif&preview.text=HELLO%20AND%20WELCOME&preview.text_type=custom#standard-styles-->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
