Opsætning af howto
Opsætning af sektion med how to guide over hvordan man booker dem i html samt styling i css
Hver punkt har fået sin egen div

--- a/brugerrejse.html
+++ b/brugerrejse.html
@@ -72,5 +72,48 @@
       </div>
     </section>
     <!--Her slutter sektionen "book a shoot" på forsiden-->
+    <!--Her starter "howto" sektionen på forsiden-->
+    <section class="howto">
+      <div class="firstguide">
+        <h1>01.</h1>
+        <h3>Lorem ipsum dolor sit amet.</h3>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos
+          asperiores, quis consequatur, eaque nobis optio perspiciatis illum
+          quibusdam iusto nesciunt ab doloremque exercitationem dolore porro
+          distinctio beatae dicta a molestias!
+        </p>
+      </div>
+      <div class="secondguide">
+        <h1>02.</h1>
+        <h3>Lorem ipsum dolor sit amet.</h3>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos
+          asperiores, quis consequatur, eaque nobis optio perspiciatis illum
+          quibusdam iusto nesciunt ab doloremque exercitationem dolore porro
+          distinctio beatae dicta a molestias!
+        </p>
+      </div>
+      <div class="thirdguide">
+        <h1>02.</h1>
+        <h3>Lorem ipsum dolor sit amet.</h3>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos
+          asperiores, quis consequatur, eaque nobis optio perspiciatis illum
+          quibusdam iusto nesciunt ab doloremque exercitationem dolore porro
+          distinctio beatae dicta a molestias!
+        </p>
+      </div>
+      <div class="fourthguide">
+        <h1>02.</h1>
+        <h3>Lorem ipsum dolor sit amet.</h3>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos
+          asperiores, quis consequatur, eaque nobis optio perspiciatis illum
+          quibusdam iusto nesciunt ab doloremque exercitationem dolore porro
+          distinctio beatae dicta a molestias!
+        </p>
+      </div>
+    </section>
   </body>
 </html>
