Grid og rettet fejl
Opsat grid i html med billeder, og stylet deres layout i css

+ rettet små fejl

--- a/brugerrejse.html
+++ b/brugerrejse.html
@@ -74,6 +74,7 @@
     <!--Her slutter sektionen "book a shoot" på forsiden-->
     <!--Her starter "howto" sektionen på forsiden-->
     <section class="howto">
+      <!--Hvert punkt inddeles i en div-->
       <div class="firstguide">
         <h1>01.</h1>
         <h3>Lorem ipsum dolor sit amet.</h3>
@@ -95,7 +96,7 @@
         </p>
       </div>
       <div class="thirdguide">
-        <h1>02.</h1>
+        <h1>03.</h1>
         <h3>Lorem ipsum dolor sit amet.</h3>
         <p>
           Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos
@@ -105,7 +106,7 @@
         </p>
       </div>
       <div class="fourthguide">
-        <h1>02.</h1>
+        <h1>04.</h1>
         <h3>Lorem ipsum dolor sit amet.</h3>
         <p>
           Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos
@@ -113,6 +114,19 @@
           quibusdam iusto nesciunt ab doloremque exercitationem dolore porro
           distinctio beatae dicta a molestias!
         </p>
+      </div>
+    </section>
+    <!--Her slutter "howto" sektionen på forsiden-->
+    <!--Her starter et grid gallery over deres seneste billeder-->
+    <section class="gallery">
+      <div class="firstimg">
+        <img src="/images/longimg.jpeg" alt="image" />
+      </div>
+      <div class="secondimg">
+        <img src="/images/funnyshoot.jpeg" alt="image" />
+      </div>
+      <div class="thirdimg">
+        <img src="/images/photoshootcloseup.jpeg" alt="image" />
       </div>
     </section>
   </body>
