--- a/brugerrejse.html
+++ b/brugerrejse.html
@@ -118,6 +118,9 @@
     </section>
     <!--Her slutter "howto" sektionen på forsiden-->
     <!--Her starter et grid gallery over deres seneste billeder-->
+    <div class="gallery-titel">
+      <h2>Gallery</h2>
+    </div>
     <section class="gallery">
       <div class="firstimg">
         <img src="/images/longimg.jpeg" alt="image" />
