Ny sektion + fjernet burger menu

--- a/brugerrejse.html
+++ b/brugerrejse.html
@@ -16,7 +16,6 @@
   </head>
   <body>
     <!--Her starter menuen-->
-    <!--menuen er lavet med hjælp fra w3schools https://www.w3schools.com/howto/howto_js_mobile_navbar.asp-->
     <section class="navigation-mobile">
       <a href="#" class="active">Krish Creative</a>
       <!--Her starter links-->
@@ -24,12 +23,6 @@
         <a href="#packages">Packages</a>
       </div>
       <!--Her slutter links-->
-      <!--Her starter burger menuen-->
-      <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-        <i class="fa fa-bars"></i>">
-      </a>
-      <!--Her slutter burger menuen-->
-      <!--Denne burger menu er lavet med hjælp fra W3schools https://www.w3schools.com/howto/howto_js_mobile_navbar.asp-->
     </section>
     <!--Her starter introduktionen på forsiden-->
     <div class="bigimage">
@@ -131,6 +124,11 @@
       <div class="thirdimg">
         <img src="/images/photoshootcloseup.jpeg" alt="image" />
       </div>
+      <!--Her begynder sektionen med "Meet the team"-->
+    </section>
+    <section class="team">
+      <h2>Meet the team</h2>
+      <img src="" alt="" />
     </section>
   </body>
 </html>
