--- a/brugerrejse.html
+++ b/brugerrejse.html
@@ -128,7 +128,7 @@
     </section>
     <section class="team">
       <h2>Meet the team</h2>
-      <img src="" alt="" />
+      <img src="/images/krish-work.jpeg" alt="The team" />
     </section>
   </body>
 </html>
