Styling af knap med ny div
For at style knappen uden at forstyrre i baggrund bag den. Er den lavet med en ny div uden for sektionen

--- a/brugerrejse.html
+++ b/brugerrejse.html
@@ -130,5 +130,9 @@
       <h2>Meet the team</h2>
       <img src="/images/krish-work.jpeg" alt="The team" />
     </section>
+    <!--Her er knappen til team sektionen-->
+    <div class="team-click">
+      <a href="#">See more</a>
+    </div>
   </body>
 </html>
