Ny sektion "Reviews" + styling
+ styling af knap til "meet the team" sektionen

--- a/brugerrejse.html
+++ b/brugerrejse.html
@@ -133,6 +133,17 @@
     <!--Her er knappen til team sektionen-->
     <div class="team-click">
       <a href="#">See more</a>
+      <hr />
     </div>
+    <section class="reviews">
+      <h2>What our clients say</h2>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae
+        laudantium, ullam accusantium quibusdam ea officiis. Placeat accusantium
+        mollitia magnam. Qui aspernatur rem eveniet magni pariatur ad odio
+        voluptas modi quis.
+      </p>
+      <h4>-Lorem, ipsum.</h4>
+    </section>
   </body>
 </html>
