Ændret burger menu til links
I stedet for burger menu har jeg ændret det til links som er sat ind på billedet med en transparent baggrund ved hjælp af W3schools

--- a/brugerrejse.html
+++ b/brugerrejse.html
@@ -15,17 +15,17 @@
     />
   </head>
   <body>
-    <!--Her starter menuen-->
-    <section class="navigation-mobile">
-      <a href="#" class="active">Krish Creative</a>
+    <!--Her starter introduktionen på forsiden-->
+    <div class="bigimage">
+      <!--Her starter menuen-->
+      <div class="navigation-mobile">
+        <a href="#" class="active">Krish Creative</a>
+      </div>
       <!--Her starter links-->
       <div id="subpages">
         <a href="#packages">Packages</a>
       </div>
       <!--Her slutter links-->
-    </section>
-    <!--Her starter introduktionen på forsiden-->
-    <div class="bigimage">
       <img src="/images/krishcreative-picture.jpeg" alt="Wedding photo" />
       <h1>Lorem ipsum dolor sit amet.</h1>
       <h3>Lorem, ipsum dolor.</h3>
