Ændring af howto sektionen + navbar
Slettet styling og ændret html for nuværende navbar pga problemer. + ændret howto sektionen

--- a/brugerrejse.html
+++ b/brugerrejse.html
@@ -15,17 +15,13 @@
     />
   </head>
   <body>
-    <!--Her starter introduktionen på forsiden-->
+    <!--Her starter containeren som indeholder navbar-->
+    <section class="navbar">
+      <a href="#">Logo</a>
+      <a href="#">Packages</a>
+    </section>
     <div class="bigimage">
-      <!--Her starter menuen-->
-      <div class="navigation-mobile">
-        <a href="#" class="active">Krish Creative</a>
-      </div>
-      <!--Her starter links-->
-      <div id="subpages">
-        <a href="#packages">Packages</a>
-      </div>
-      <!--Her slutter links-->
+      <!--Her starter forside billedet-->
       <img src="/images/krishcreative-picture.jpeg" alt="Wedding photo" />
       <h1>Lorem ipsum dolor sit amet.</h1>
       <h3>Lorem, ipsum dolor.</h3>
