Ændring af html navbar
+ styling af størrelse font for h1

--- a/brugerrejse.html
+++ b/brugerrejse.html
@@ -17,8 +17,8 @@
   <body>
     <!--Her starter containeren som indeholder navbar-->
     <section class="navbar">
-      <a href="#">Logo</a>
-      <a href="#">Packages</a>
+      <div class="logo"><a href="#">KrishCreative</a></div>
+      <div class="links"><a href="#">Packages</a></div>
     </section>
     <div class="bigimage">
       <!--Her starter forside billedet-->
