--- a/brugerrejse.html
+++ b/brugerrejse.html
@@ -134,10 +134,10 @@
     <section class="reviews">
       <h2>What our clients say</h2>
       <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae
+        "Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae
         laudantium, ullam accusantium quibusdam ea officiis. Placeat accusantium
         mollitia magnam. Qui aspernatur rem eveniet magni pariatur ad odio
-        voluptas modi quis.
+        voluptas modi quis."
       </p>
       <h4>-Lorem, ipsum.</h4>
     </section>
