Text transform + ændring af h3
Der er lavet uppercase til alle titler, samt skrevet tekst i h3

--- a/brugerrejse.html
+++ b/brugerrejse.html
@@ -24,7 +24,7 @@
       <!--Her starter forside billedet-->
       <img src="/images/krishcreative-picture.jpeg" alt="Wedding photo" />
       <h1>Lorem ipsum dolor sit amet.</h1>
-      <h3>Lorem, ipsum dolor.</h3>
+      <h3>Krish Creative studio</h3>
       <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Error a
         voluptas, dolore id earum autem optio molestiae incidunt minima quia.
