--- a/brugerrejse.html
+++ b/brugerrejse.html
@@ -134,5 +134,9 @@
       </p>
       <h4>-Lorem, ipsum.</h4>
     </section>
+    <section class="footer">
+      <h3>Contact us</h3>
+      <h3>Connect</h3>
+    </section>
   </body>
 </html>
