Gemt billede for mobile
Som skal vises til desktop

--- a/brugerrejse.html
+++ b/brugerrejse.html
@@ -16,6 +16,9 @@
     <div class="bigimage">
       <!--Her starter forside billedet-->
       <img src="/images/krishcreative-picture.jpeg" alt="Wedding photo" />
+      <div class="desktop-picture">
+        <img src="/images/car-wedding.jpeg" alt="Wedding photo" />
+      </div>
       <h1>Lorem ipsum dolor sit amet.</h1>
       <h3>Krish Creative studio</h3>
       <p>
