Billeder + media only screen

--- a/brugerrejse.html
+++ b/brugerrejse.html
@@ -14,10 +14,10 @@
       <div class="links"><a href="#">Packages</a></div>
     </section>
     <div class="bigimage">
-      <!--Her starter forside billedet-->
+      <!--Her starter forside billedene-->
       <img src="/images/krishcreative-picture.jpeg" alt="Wedding photo" />
       <div class="desktop-picture">
-        <img src="/images/car-wedding.jpeg" alt="Wedding photo" />
+        <img src="/images/krish-colorphoto.jpg" alt="Wedding photo" />
       </div>
       <h1>Lorem ipsum dolor sit amet.</h1>
       <h3>Krish Creative studio</h3>
