Ny navbar + styling og kommentarer
Ny navbar lavet i html og css med hjælp fra W3schools. Der er lavet henvisning til siden med kommentarer.

--- a/brugerrejse.html
+++ b/brugerrejse.html
@@ -9,10 +9,18 @@
   </head>
   <body>
     <!--Her starter containeren som indeholder navbar-->
-    <section class="navbar">
-      <div class="logo"><a href="#">KrishCreative</a></div>
-      <div class="links"><a href="#">Packages</a></div>
-    </section>
+    <!--Navbar lavet med hjælp fra W3schools: https://www.w3schools.com/howto/howto_css_responsive_header.asp?fbclid=IwAR3dDaXUSJFloyI0Z2lAkwO5eXs36Xa6xRUvvP18-R5EnQQn4Qb5m8ns2fY-->
+    <div class="navbar">
+      <a href="#" class="logo">KrishCreative</a>
+      <!--Her starter links-->
+      <div class="links">
+        <a class="klikbart" href="#">Home</a>
+        <a href="#about">About</a>
+        <a href="#gallery">Gallery</a>
+        <a href="#packages">Packages</a>
+        <a href="#contact">Contact us</a>
+      </div>
+    </div>
     <div class="bigimage">
       <!--Her starter forside billedene-->
       <img src="/images/krishcreative-picture.jpeg" alt="Wedding photo" />
