--- a/brugerrejse.html
+++ b/brugerrejse.html
@@ -145,9 +145,18 @@
       </p>
       <h4>-Lorem, ipsum.</h4>
     </section>
-    <section class="footer">
-      <h3>Contact us</h3>
+    <footer>
+      <h3>Contact</h3>
+      <div class="info">
+        <p>kcreative289@gmail.com</p>
+        <p>+94 77 783 1310</p>
+        <p>Eachchamoddai 4, Jaffna</p>
+        <p>Sri Lanka</p>
+      </div>
       <h3>Connect</h3>
-    </section>
+      <a href="#facebook">Facebook</a>
+      <a href="#instagram">Instagram</a>
+      <a href="#email">Email</a>
+    </footer>
   </body>
 </html>
