Forside billede til desktop
Lavet i grid og tildelt områder + kommentarer

--- a/brugerrejse.html
+++ b/brugerrejse.html
@@ -21,21 +21,23 @@
         <a href="#contact">Contact us</a>
       </div>
     </div>
-    <div class="bigimage">
+    <section class="bigimage">
       <!--Her starter forside billedene-->
       <img src="/images/krishcreative-picture.jpeg" alt="Wedding photo" />
       <div class="desktop-picture">
         <img src="/images/krish-colorphoto.jpg" alt="Wedding photo" />
       </div>
-      <h1>Lorem ipsum dolor sit amet.</h1>
-      <h3>Krish Creative studio</h3>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Error a
-        voluptas, dolore id earum autem optio molestiae incidunt minima quia.
-      </p>
-      <!--Denne streg er lavet med hjælp fra W3schools https://www.w3schools.com/tags/tag_hr.asp-->
-      <hr />
-    </div>
+      <div class="bigimg-text">
+        <h1>Lorem ipsum dolor sit amet.</h1>
+        <h3>Krish Creative studio</h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Error a
+          voluptas, dolore id earum autem optio molestiae incidunt minima quia.
+        </p>
+        <!--Denne streg er lavet med hjælp fra W3schools https://www.w3schools.com/tags/tag_hr.asp-->
+        <hr />
+      </div>
+    </section>
     <!--Her slutter introduktionen på forsiden-->
     <!--Her starter sektionen "latest work" på forsiden-->
     <div class="work">
