Grid for sektionen howto
Brugt grid for at få dem på en række + kommentarer

--- a/brugerrejse.html
+++ b/brugerrejse.html
@@ -27,6 +27,7 @@
       <div class="desktop-picture">
         <img src="/images/krish-colorphoto.jpg" alt="Wedding photo" />
       </div>
+      <!--Teksten har fået sin egen div til et grid-->
       <div class="bigimg-text">
         <h1>Lorem ipsum dolor sit amet.</h1>
         <h3>Krish Creative studio</h3>
