Gallery til desktop grid
Gallery lavet til desktop via grid med nye billeder

--- a/brugerrejse.html
+++ b/brugerrejse.html
@@ -127,6 +127,12 @@
       <div class="thirdimg">
         <img src="/images/photoshootcloseup.jpeg" alt="image" />
       </div>
+      <div class="bw-first">
+        <img src="/images/bwcar.jpeg" alt="Wedding shoot" />
+      </div>
+      <div class="bw-second">
+        <img src="/images/bwkrish.jpeg" alt="Wedding shoot" />
+      </div>
       <!--Her begynder sektionen med "Meet the team"-->
     </section>
     <section class="team">
