Ny footer med separate containere
+ stylet i css med grid

--- a/brugerrejse.html
+++ b/brugerrejse.html
@@ -154,18 +154,29 @@
       </p>
       <h4>-Lorem, ipsum.</h4>
     </section>
-    <footer>
-      <h3>Contact</h3>
-      <div class="info">
-        <p>kcreative289@gmail.com</p>
-        <p>+94 77 783 1310</p>
-        <p>Eachchamoddai 4, Jaffna</p>
-        <p>Sri Lanka</p>
+    <section class="footer">
+      <div class="contact">
+        <h3>Contact</h3>
+        <div class="text">
+          <p>kcreative289@gmail.com</p>
+          <p>+94 77 783 1310</p>
+          <p>Eachchamoddai 4, Jaffna</p>
+          <p>Sri Lanka</p>
+        </div>
       </div>
-      <h3>Connect</h3>
-      <a href="#facebook">Facebook</a>
-      <a href="#instagram">Instagram</a>
-      <a href="#email">Email</a>
-    </footer>
+      <div class="connect">
+        <h3>Connect</h3>
+        <div class="facebook">
+          <a href="https://www.facebook.com/kriscreative" target="_blank"
+            >Facebook</a
+          ></div>
+          <div class="instagram">
+          <a href="https://www.instagram.com/krish.creative/?hl=da"
+            target="_blank"
+            >Instagram</a
+          ></div>
+          <div class="email"></div><a href="krishcreative@outlook.com" target="_blank">Email</a></div>
+      </div>
+    </section>
   </body>
 </html>
