Grid footer + target_blank
+ SoMe ikoner tilføjet

--- a/brugerrejse.html
+++ b/brugerrejse.html
@@ -169,13 +169,18 @@
         <div class="facebook">
           <a href="https://www.facebook.com/kriscreative" target="_blank"
             >Facebook</a
-          ></div>
-          <div class="instagram">
-          <a href="https://www.instagram.com/krish.creative/?hl=da"
+          >
+        </div>
+        <div class="instagram">
+          <a
+            href="https://www.instagram.com/krish.creative/?hl=da"
             target="_blank"
             >Instagram</a
-          ></div>
-          <div class="email"></div><a href="krishcreative@outlook.com" target="_blank">Email</a></div>
+          >
+        </div>
+        <div class="email">
+          <a href="krishcreative@outlook.com" target="_blank">Email</a>
+        </div>
       </div>
     </section>
   </body>
