Billeder + mere tekst

--- a/brugerrejse.html
+++ b/brugerrejse.html
@@ -32,8 +32,10 @@
         <h1>Lorem ipsum dolor sit amet.</h1>
         <h3>Krish Creative studio</h3>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Error a
-          voluptas, dolore id earum autem optio molestiae incidunt minima quia.
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptates,
+          natus eveniet? Mollitia eius perferendis, quidem eveniet est ad
+          laudantium? Facere distinctio nulla nihil atque ex veritatis sequi sed
+          provident dolore.
         </p>
         <!--Denne streg er lavet med hjælp fra W3schools https://www.w3schools.com/tags/tag_hr.asp-->
         <hr />
@@ -43,12 +45,15 @@
     <!--Her starter sektionen "latest work" på forsiden-->
     <div class="work">
       <img src="/images/krish-work.jpeg" alt="Latest work" />
-      <h1>Lorem ipsum dolor sit amet.</h1>
-      <p>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ab, mollitia.
-        Error, est dicta labore temporibus itaque rerum repellendus? Officiis,
-        cumque!
-      </p>
+      <div class="worktxt">
+        <h1>Lorem ipsum dolor sit amet.</h1>
+        <p>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nemo quae
+          aliquam necessitatibus eveniet exercitationem quisquam quam tempora
+          harum magni corporis distinctio, commodi, fugit quia labore. Enim
+          aperiam laboriosam ipsum tempore.
+        </p>
+      </div>
       <div class="clickme">
         <a href="#">See more</a>
       </div>
@@ -59,9 +64,10 @@
       <img src="/images/book-shoot-krish.jpeg" alt="Book a shoot" />
       <h1>Lorem ipsum dolor sit amet.</h1>
       <p>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ab, mollitia.
-        Error, est dicta labore temporibus itaque rerum repellendus? Officiis,
-        cumque!
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sunt numquam
+        officiis voluptatem non tempora provident iusto perferendis voluptates!
+        Voluptatem voluptatum veritatis nesciunt quia vel possimus repellendus
+        aut quibusdam laborum suscipit.
       </p>
       <div class="book">
         <a href="#">Book a shoot</a>
