Grid container til ny side
Alt html som skal bruges til navbar og grid er sat ind i den nye underside + den er renamed da jeg skrev forkert første gang

--- a/packages.html
+++ b/packages.html
@@ -21,5 +21,25 @@
         <a href="#contact">Contact us</a>
       </div>
     </div>
+    <!--Her starter et grid som indeholder de forskellige begivenheder til packages-->
+    <div class="packages">
+      <h1>Packages</h1>
+    </div>
+    <div class="wedding">
+      <img src="/images/bride.jpeg" alt="Wedding" />
+      <a href="#">See more</a>
+    </div>
+    <div class="engagement">
+      <img src="/images/engagement.jpeg" alt="Engagement" />
+      <a href="#">See more</a>
+    </div>
+    <div class="ceremony">
+      <img src="/images/bridephoto.jpeg" alt="Ceremony" />
+      <a href="#">See more</a>
+    </div>
+    <div class="birthday">
+      <img src="/images/birthday.jpeg" alt="Birthday" />
+      <a href="#">See more</a>
+    </div>
   </body>
 </html>
