--- a/brugerrejse.html
+++ b/brugerrejse.html
@@ -74,6 +74,16 @@
       </div>
     </section>
     <!--Her slutter sektionen "book a shoot" på forsiden-->
+    <!--Her starter team sektionen-->
+    <section class="team">
+      <h2>Meet the team</h2>
+      <img src="/images/krish-work.jpeg" alt="The team" />
+    </section>
+    <!--Her er knappen til team sektionen-->
+    <div class="team-click">
+      <a href="#">See more</a>
+      <hr />
+    </div>
     <!--Her starter "howto" sektionen på forsiden-->
     <section class="howto">
       <!--Hvert punkt inddeles i en div-->
@@ -141,15 +151,7 @@
       </div>
       <!--Her begynder sektionen med "Meet the team"-->
     </section>
-    <section class="team">
-      <h2>Meet the team</h2>
-      <img src="/images/krish-work.jpeg" alt="The team" />
-    </section>
-    <!--Her er knappen til team sektionen-->
-    <div class="team-click">
-      <a href="#">See more</a>
-      <hr />
-    </div>
+    <!--Her starter anmeldelser-->
     <section class="reviews">
       <h2>What our clients say</h2>
       <p>
