Tekst sat ind + hr linje
Tekst sat ind til hver sektion også er der lavet en linje med hr tagget under anmeldelserne på siden.

--- a/brugerrejse.html
+++ b/brugerrejse.html
@@ -29,13 +29,13 @@
       </div>
       <!--Teksten har fået sin egen div til et grid-->
       <div class="bigimg-text">
-        <h1>Lorem ipsum dolor sit amet.</h1>
+        <h1>Photography for your special days</h1>
         <h3>Krish Creative studio</h3>
         <p>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptates,
-          natus eveniet? Mollitia eius perferendis, quidem eveniet est ad
-          laudantium? Facere distinctio nulla nihil atque ex veritatis sequi sed
-          provident dolore.
+          Are you in need of a good photographer that can capture pictures from
+          your best angle? Well look no further. At Krish Creative Studio we are
+          truly passionate about our work and we want the best results for our
+          customers so that they will have no worries on their big day
         </p>
         <!--Denne streg er lavet med hjælp fra W3schools https://www.w3schools.com/tags/tag_hr.asp-->
         <hr />
@@ -46,12 +46,10 @@
     <div class="work">
       <img src="/images/krish-work.jpeg" alt="Latest work" />
       <div class="worktxt">
-        <h1>Lorem ipsum dolor sit amet.</h1>
+        <h1>Our latest work</h1>
         <p>
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nemo quae
-          aliquam necessitatibus eveniet exercitationem quisquam quam tempora
-          harum magni corporis distinctio, commodi, fugit quia labore. Enim
-          aperiam laboriosam ipsum tempore.
+          Feel free to take a look at our latest work and see if our style is
+          something you would like.
         </p>
       </div>
       <div class="clickme">
@@ -62,12 +60,10 @@
     <!--Her starter sektionen "book a shoot" på forsiden-->
     <section class="shoot">
       <img src="/images/book-shoot-krish.jpeg" alt="Book a shoot" />
-      <h1>Lorem ipsum dolor sit amet.</h1>
+      <h1>Book a shoot</h1>
       <p>
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sunt numquam
-        officiis voluptatem non tempora provident iusto perferendis voluptates!
-        Voluptatem voluptatum veritatis nesciunt quia vel possimus repellendus
-        aut quibusdam laborum suscipit.
+        Want to work with us? Click the button to book a shoot and then we will
+        contact you about your vision
       </p>
       <div class="book">
         <a href="#">Book a shoot</a>
@@ -76,13 +72,13 @@
     <!--Her slutter sektionen "book a shoot" på forsiden-->
     <!--Her starter team sektionen-->
     <section class="team">
-      <h2>Meet the team</h2>
       <img src="/images/krish-work.jpeg" alt="The team" />
+      <h2>Meet the team</h2>
+      <p>Meet our team and see the star photographers behind our work</p>
     </section>
     <!--Her er knappen til team sektionen-->
     <div class="team-click">
       <a href="#">See more</a>
-      <hr />
     </div>
     <!--Her starter "howto" sektionen på forsiden-->
     <section class="howto">
@@ -161,6 +157,7 @@
         voluptas modi quis."
       </p>
       <h4>-Lorem, ipsum.</h4>
+      <hr />
     </section>
     <section class="footer">
       <div class="contact">
