--- a/brugerrejse.html
+++ b/brugerrejse.html
@@ -43,43 +43,44 @@
     </section>
     <!--Her slutter introduktionen på forsiden-->
     <!--Her starter sektionen "latest work" på forsiden-->
-    <div class="work">
-      <img src="/images/krish-work.jpeg" alt="Latest work" />
+    <section class="three-sections">
+      <div class="work">
+        <img src="/images/krish-work.jpeg" alt="Our latest work" />
+      </div>
       <div class="worktxt">
-        <h1>Our latest work</h1>
+        <h3>Our latest work</h3>
         <p>
           Feel free to take a look at our latest work and see if our style is
           something you would like.
         </p>
       </div>
-      <div class="clickme">
+      <div class="work-a">
         <a href="#">See more</a>
       </div>
-    </div>
-    <!--Her slutter sektionen "latest work" på forsiden-->
-    <!--Her starter sektionen "book a shoot" på forsiden-->
-    <section class="shoot">
-      <img src="/images/book-shoot-krish.jpeg" alt="Book a shoot" />
-      <h1>Book a shoot</h1>
-      <p>
-        Want to work with us? Click the button to book a shoot and then we will
-        contact you about your vision
-      </p>
       <div class="book">
+        <img src="/images/book-shoot-krish.jpeg" alt="Book a shoot" />
+      </div>
+      <div class="booktxt">
+        <h3>Book a shoot</h3>
+        <p>
+          Want to work with us? Click the button to book a shoot and then we
+          will contact you about your vision
+        </p>
+      </div>
+      <div class="book-a">
         <a href="#">Book a shoot</a>
       </div>
+      <div class="team">
+        <img src="/images/team-krish.png" alt="Meet the team" />
+      </div>
+      <div class="teamtxt">
+        <h3>Meet the team</h3>
+        <p>Meet our team and see the star photographers behind our work</p>
+      </div>
+      <div class="team-a">
+        <a href="#">See more</a>
+      </div>
     </section>
-    <!--Her slutter sektionen "book a shoot" på forsiden-->
-    <!--Her starter team sektionen-->
-    <section class="team">
-      <img src="/images/krish-work.jpeg" alt="The team" />
-      <h2>Meet the team</h2>
-      <p>Meet our team and see the star photographers behind our work</p>
-    </section>
-    <!--Her er knappen til team sektionen-->
-    <div class="team-click">
-      <a href="#">See more</a>
-    </div>
     <!--Her starter "howto" sektionen på forsiden-->
     <section class="howto">
       <!--Hvert punkt inddeles i en div-->
