Grid i html og css
Grid sat op i html til packages og stylet som et grid i css, derefter er hvert a link stylet individuelt

--- a/packages.html
+++ b/packages.html
@@ -27,18 +27,26 @@
     </div>
     <div class="wedding">
       <img src="/images/bride.jpeg" alt="Wedding" />
+    </div>
+    <div class="wedding-a">
       <a href="#">See more</a>
     </div>
     <div class="engagement">
       <img src="/images/engagement.jpeg" alt="Engagement" />
+    </div>
+    <div class="engagement-a">
       <a href="#">See more</a>
     </div>
     <div class="ceremony">
       <img src="/images/bridephoto.jpeg" alt="Ceremony" />
+    </div>
+    <div class="ceremony-a">
       <a href="#">See more</a>
     </div>
     <div class="birthday">
       <img src="/images/birthday.jpeg" alt="Birthday" />
+    </div>
+    <div class="birthday-a">
       <a href="#">See more</a>
     </div>
   </body>
