Opbygning af grid i html og styling
Først blev selve containeren opbygget i html og inddelt i forskellige div.
Herefter er det stylet i css, hvor hvert a element er stylet individuelt.

--- a/prices.html
+++ b/prices.html
@@ -21,5 +21,116 @@
         <a href="#contact">Contact us</a>
       </div>
     </div>
+    <section class="prices">
+      <div class="silver-package">
+        <h3>Silver package</h3>
+      </div>
+      <div class="silver-content">
+        <p>
+          2 Photographers
+          <br />
+          2 Videographers
+          <br />
+          80 pages 12X30 Album
+          <br />
+          20 pages 8X24 Preshoot album
+          <br />
+          1 Signature frame
+          <br />
+          100 Thank you cards
+          <br />
+          1 12X18 frames
+          <br />
+          2 Blu-rays
+          <br />
+          1 Pen drive
+        </p>
+      </div>
+      <div class="silver-activities">
+        <h3>You will also receive the following activities:</h3>
+        <p>
+          Full day coverage
+          <br />
+          Ceremony
+          <br />
+          Pre-shoot OR Post-shoot session
+        </p>
+      </div>
+      <div class="silver-a">
+        <a href="#">Book now</a>
+      </div>
+      <div class="gold-package">
+        <h3>gold package</h3>
+      </div>
+      <div class="gold-content">
+        <p>
+          2 Photographers
+          <br />
+          2 Videographers
+          <br />
+          80 pages 12X30 Album
+          <br />
+          20 pages 8X24 Preshoot album
+          <br />
+          1 Signature frame
+          <br />
+          100 Thank you cards
+          <br />
+          1 12X18 frames
+          <br />
+          2 Blu-rays
+          <br />
+          1 Pen drive
+        </p>
+      </div>
+      <div class="gold-activities">
+        <h3>You will also receive the following activities</h3>
+        <p>
+          Full day coverage
+          <br />
+          Ceremony
+          <br />
+          Pre-shoot OR Post-shoot session
+        </p>
+      </div>
+      <div class="gold-a">
+        <a href="#">Book now</a>
+      </div>
+      <div class="bronze-package">
+        <h3>Bronze package</h3>
+      </div>
+      <div class="bronze-content">
+        <p>
+          1 Photographers
+          <br />
+          1 Videographers
+          <br />
+          70 pages 12X30
+          <br />
+          AlbumGlass top wood
+          <br />
+          1 Signature frame
+          <br />
+          1 12x18 frame
+          <br />
+          1 Blu-rays
+          <br />
+          2 DVDs
+        </p>
+      </div>
+      <div class="bronze-activities">
+        <h3>You will also receive the following activities</h3>
+        <p>
+          Full day coverage
+          <br />
+          Ceremony
+          <br />
+          Pre-shoot OR Post-shoot session
+        </p>
+      </div>
+      <div class="bronze-a">
+        <a href="#">Book now</a>
+      </div>
+    </section>
   </body>
 </html>
