Fra p tag til ul og li
P tag udskiftet med en ul liste og li liste items

--- a/prices.html
+++ b/prices.html
@@ -26,35 +26,25 @@
         <h3>Silver package</h3>
       </div>
       <div class="silver-content">
-        <p>
-          2 Photographers
-          <br />
-          2 Videographers
-          <br />
-          80 pages 12X30 Album
-          <br />
-          20 pages 8X24 Preshoot album
-          <br />
-          1 Signature frame
-          <br />
-          100 Thank you cards
-          <br />
-          1 12X18 frames
-          <br />
-          2 Blu-rays
-          <br />
-          1 Pen drive
-        </p>
+        <ul>
+          <li>2 photographers</li>
+          <li>2 Videographers</li>
+          <li>80 pages 12X30 album</li>
+          <li>20 pages 8X24 preshoot album</li>
+          <li>1 signature frame</li>
+          <li>100 thank you cards</li>
+          <li>1 12X18 frames</li>
+          <li>2 blu-rays</li>
+          <li>1 pen drive</li>
+        </ul>
       </div>
       <div class="silver-activities">
         <h3>You will also receive the following activities:</h3>
-        <p>
-          Full day coverage
-          <br />
-          Ceremony
-          <br />
-          Pre-shoot OR Post-shoot session
-        </p>
+        <ul>
+          <li>Full day coverage</li>
+          <li>Ceremony</li>
+          <li>Pre-shoot or Post-shoot session</li>
+        </ul>
       </div>
       <div class="silver-a">
         <a href="#">Book now</a>
@@ -63,35 +53,25 @@
         <h3>gold package</h3>
       </div>
       <div class="gold-content">
-        <p>
-          2 Photographers
-          <br />
-          2 Videographers
-          <br />
-          80 pages 12X30 Album
-          <br />
-          20 pages 8X24 Preshoot album
-          <br />
-          1 Signature frame
-          <br />
-          100 Thank you cards
-          <br />
-          1 12X18 frames
-          <br />
-          2 Blu-rays
-          <br />
-          1 Pen drive
-        </p>
+        <ul>
+          <li>2 photographers</li>
+          <li>2 videographers</li>
+          <li>80 pages 12X30 album</li>
+          <li>20 pages 8X24 preshoot album</li>
+          <li>1 signature frame</li>
+          <li>100 thank you cards</li>
+          <li>1 12X18 frames</li>
+          <li>2 blu-rays</li>
+          <li>1 pen drive</li>
+        </ul>
       </div>
       <div class="gold-activities">
         <h3>You will also receive the following activities</h3>
-        <p>
-          Full day coverage
-          <br />
-          Ceremony
-          <br />
-          Pre-shoot OR Post-shoot session
-        </p>
+        <ul>
+          <li>Full day coverage</li>
+          <li>Ceremony</li>
+          <li>Pre-shoot or Post-shoot session</li>
+        </ul>
       </div>
       <div class="gold-a">
         <a href="#">Book now</a>
@@ -100,33 +80,23 @@
         <h3>Bronze package</h3>
       </div>
       <div class="bronze-content">
-        <p>
-          1 Photographers
-          <br />
-          1 Videographers
-          <br />
-          70 pages 12X30
-          <br />
-          AlbumGlass top wood
-          <br />
-          1 Signature frame
-          <br />
-          1 12x18 frame
-          <br />
-          1 Blu-rays
-          <br />
-          2 DVDs
-        </p>
+        <ul>
+          <li>1 Photographers</li>
+          <li>1 Videographers</li>
+          <li>70 pages 12X30 AlbumGlass top wood</li>
+          <li>1 Signature frame</li>
+          <li>1 12x18 frame</li>
+          <li>1 Blu-rays</li>
+          <li>2 DVDs</li>
+        </ul>
       </div>
       <div class="bronze-activities">
         <h3>You will also receive the following activities</h3>
-        <p>
-          Full day coverage
-          <br />
-          Ceremony
-          <br />
-          Pre-shoot OR Post-shoot session
-        </p>
+        <ul>
+          <li>Full day coverage</li>
+          <li>Ceremony</li>
+          <li>Pre-shoot or Post-shoot session</li>
+        </ul>
       </div>
       <div class="bronze-a">
         <a href="#">Book now</a>
